--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <section class="section-text">
         <div class="container">
           <h2 class="visually-hidden">
-            Objectives of the task and their solutions>
+            Objectives of the task and their solutions
           </h2>
           <ul class="list-icon-text">
             <li class="item-icon-text">
