--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <!--Section 2 Text-->
       <section class="section-text">
         <div class="container">
-          <h2 class="visually-hidden">
+          <h2 hidden class="visually-hidden">
             Objectives of the task and their solutions
           </h2>
           <ul class="list-icon-text">
