--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
               </div>
             </li>
           </ul>
-
-          <ul class="list-text">
+          <ul class="list-icon-text">
             <li class="item-text">
               <h3 class="title-text title-subject">Strategy</h3>
               <p class="text-description text">
